# robot-holdem

./: .env.example  .windsurfrules  README.md  pyproject.toml
src/robot_hold_em/: __init__.py  __main__.py  settings.py
src/robot_hold_em/commentators/: __init__.py  base.py  llm_commentator.py  manager.py  personalities.py
src/robot_hold_em/core/: __init__.py  card.py  deck.py  game_state.py  hand.py
src/robot_hold_em/players/: __init__.py  base.py  llm_personalities.py  llm_robot.py  robots.py
